@@ -1,3 +1,13 @@
+2012-11-04 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/agentes/status_monitor.php: improved the page status
+	monitor, show in another column the tags and added a select box with
+	the tags in user in the filter form.
+	
+	Pending task: #3581578
+	
+	MERGED FROM THE TRUNK.
+
 2012-10-29 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* extensions/update_manager.php: silenced the notice PHP message
